--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -82,9 +82,13 @@ main {
 
 }
 
+section {
+    margin-top: 130px;
+
+}
+
 /* about section  */
 .about {
-    margin-top: 130px;
     text-align: center;
     background: #e0c2ad;
     border-radius: 10px;
@@ -93,7 +97,9 @@ main {
 }
 
 .section-title {
-    margin-bottom: 30px;
+    text-align: center;
+
+    margin-bottom: 50px;
     font-weight: 700;
     font-size: 35px;
 }
@@ -104,18 +110,109 @@ main {
     margin-bottom: 30px;
 
 }
-.about-info-container{
+
+.about-info-container {
     display: flex;
     justify-content: space-around;
 
 }
-.about .info-title{
+
+.about .info-title {
     font-size: 20px;
     color: #757575;
 }
-.info-description{
+
+.info-description {
     font-weight: 700;
     font-size: 20px;
     color: #474747;
 
+}
+
+/* what i do styles */
+
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    background: #edf0c3d2;
+    box-shadow: 0px 6px 50px rgba(95, 92, 92, 0.2);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.skill-title {
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.skill-description {
+    color: #757575;
+}
+
+/* resume style */
+.resume-content {
+    display: flex;
+    gap: 24px;
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+    /* justify-content: space-around; */
+
+.resume .title {
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 20px;
+
+}
+
+.resume .sub-title {
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 30px;
+
+}
+
+.resume .description {
+    color: #757575;
+}
+
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
+}
+
+/* contract style */
+.contact .section-title{
+    text-align: left;
+}
+.contact{
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+    padding: 130px 200px;
+}
+.contact input[type="text"],input[type="email"], textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+
+}
+input{
+    height: 64px;
+
+}
+.contact a{
+    text-decoration: none;
+    
 }
